<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/ic_launcher_foreground">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/Toolbar.TitleText"
            android:textColor="@color/colorAccent" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <TextView
                    android:id="@+id/textViewEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/strEdad"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:id="@+id/editTextEdad"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:hint="@string/_00"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewEdad"
                    app:layout_constraintStart_toEndOf="@+id/textViewEdad"
                    app:layout_constraintTop_toTopOf="@+id/textViewEdad">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/strAnos"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextEdad"
                    app:layout_constraintStart_toEndOf="@+id/editTextEdad"
                    app:layout_constraintTop_toTopOf="@+id/editTextEdad" />


                <TextView
                    android:id="@+id/textViewGrosor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/strGrosor"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEdad" />

                <EditText
                    android:id="@+id/editTextGrosor"
                    android:layout_width="@dimen/cincuenta"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:hint="@string/_00"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewGrosor"
                    app:layout_constraintStart_toEndOf="@+id/textViewGrosor"
                    app:layout_constraintTop_toTopOf="@+id/textViewGrosor" />

                <TextView
                    android:id="@+id/textViewMMrosor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/strMm"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextGrosor"
                    app:layout_constraintStart_toEndOf="@+id/editTextGrosor"
                    app:layout_constraintTop_toTopOf="@+id/editTextGrosor" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/strDiametro"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewGrosor" />

                <EditText
                    android:id="@+id/editTextAuricula"
                    android:layout_width="@dimen/cincuenta"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:hint="@string/_00"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/strMm"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextAuricula"
                    app:layout_constraintStart_toEndOf="@+id/editTextAuricula"
                    app:layout_constraintTop_toTopOf="@+id/editTextAuricula" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/strGradiente_m"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/editTextGradiente"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    android:selectAllOnFocus="true"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textViewmmHg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/mmhg"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextGradiente"
                    app:layout_constraintStart_toEndOf="@+id/editTextGradiente"
                    app:layout_constraintTop_toTopOf="@+id/editTextGradiente" />

                <CheckBox
                    android:id="@+id/checkBoxMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:text="@string/strHistoria_ms"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <CheckBox
                    android:id="@+id/checkBoxTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:text="@string/strTV"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxMS" />

                <CheckBox
                    android:id="@+id/checkBoxSincope"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/strSincope_i"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxTV" />

                <Button
                    android:id="@+id/buttonCalcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/myboton"
                    android:text="@string/strCalcular"
                    android:textColor="@color/blancoPuro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxSincope" />

                <TextView
                    android:id="@+id/textView1Riesgo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/strRiesgo"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/buttonCalcular" />

                <TextView
                    android:id="@+id/textViewPorcentaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/rojoOscuro"
                    android:textSize="@dimen/veinte"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView1Riesgo" />

                <TextView
                    android:id="@+id/textView1Recomendacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/strRecomendacion"
                    android:textSize="@dimen/dieciseis"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPorcentaje" />

                <TextView
                    android:id="@+id/textViewRecomendaciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/verdeOscuro"
                    android:textSize="@dimen/veinte"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView1Recomendacion" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/strConsejos"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/doce"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRecomendaciones" />

                <TextView
                    android:id="@+id/textGuias_esc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="64dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/strGuias"
                    android:textColor="@color/NegroPuro"
                    android:textSize="@dimen/doce"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

